2006-04-09	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, exo/exo-tree-view.{c,h}, exo/exo.symbols:
	  Add "single-click-timeout" properties to ExoIconView and ExoTreeView,
	  which control the delay after which the item under the mouse pointer
	  is automatically selected. Bug #1509.
	* docs/reference/: Update API documentation.

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_select_all_between), THANKS:
	  Apply patch to improve shift-selection in the icon view, from
	  Matt McClinch <mattmcclinch@gmail.com>.

2006-04-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Do not depend on Xfce 4.2.2, as 4.2.1 will also do.
	* configure.in.in: Solaris has MD5 functions in libmd5.
	* exo/exo-toolbars-editor-dialog.c
	  (exo_toolbars_editor_dialog_add_toolbar): Fix format warning.
	* exo/exo-xsession-client.c(exo_xsession_client_set_group): Use
	  memcpy() instead of bcopy().
	* docs/reference/exo-open.xml: Fix typo.

2006-03-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_row_inserted): No need to invali-
	  date the prelit_item here.

2006-03-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_release_event): Use button
	  release to easily alter the selection even if all visible rows are
	  selected in possible preparation for a drag operation.

2006-03-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Implement "Right Arrow Keyboard Navigation" for
	  ExoIconView, as requested by Jannis. Bug #1623.

2006-03-21	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Do not
	  mess up with double click events.

2006-03-18	Benedikt Meurer <benny@xfce.org>

	* THANKS: Add translator credits for Andrey Fedoseev
	  <andrey.fedoseev@gmail.com>.

2006-03-16	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Allow to
	  alter selection using Ctrl+button/Shift+button.
